--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "echarts": "^4.8.0",
+    "element-ui": "^2.13.2",
+    "jquery": "^3.5.1",
+    "ol": "^6.3.1",
+    "vue": "^2.6.11",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-router": "^4.4.6",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
@@ -23,7 +31,12 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "jquery": true,
+      "es6":true,
+      "browser": true,
+      "commonjs": true,
+      "amd": true
     },
     "extends": [
       "plugin:vue/essential",
@@ -32,7 +45,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": 0,
+      "off":0
+    }
   },
   "browserslist": [
     "> 1%",
